--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "description": "Logs Toggl time entries in Jira.",
   "homepage": "https://bitbucket.org/heymagurany/toggl-to-time-card",
   "dependencies": {
-    "toggl-api": ">=0.0.3",
+    "async": ">=0.9.0",
+    "bluebird": "^3.4.6",
+    "lodash": "^4.17.2",
+    "moment": "^2.17.1",
     "request": ">=2.53.0",
-    "async": ">=0.9.0"
+    "request-promise": "^4.1.1",
+    "toggl-api": ">=0.0.3",
+    "yargs": "^6.5.0"
   },
   "devDependencies": {
+    "grunt": "^1.0.1",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-jshint": "^0.11.1"
   },
