--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "async": ">=0.9.0",
     "bluebird": "^3.4.6",
+    "ini": "^1.3.5",
     "lodash": "^4.17.2",
     "moment": "^2.17.1",
+    "read-all-up": "^1.0.1",
     "request": ">=2.53.0",
     "request-promise": "^4.1.1",
     "toggl-api": ">=0.0.3",
