--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Logs Toggl time entries in Jira.",
   "homepage": "https://bitbucket.org/heymagurany/toggl-to-time-card",
   "dependencies": {
-    "async": ">=0.9.0",
     "bluebird": "^3.4.6",
     "ini": "^1.3.5",
     "lodash": "^4.17.2",
@@ -13,14 +12,13 @@
     "request": ">=2.53.0",
     "request-promise": "^4.1.1",
     "toggl-api": ">=0.0.3",
-    "yargs": "^6.5.0"
+    "yargs": "^14.2.0"
   },
   "devDependencies": {
-    "grunt": "^1.0.1",
-    "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-jshint": "^0.11.1"
+    "eslint": "^6.6.0"
   },
   "scripts": {
+    "lint": "eslint lib/; exit 0",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Matt Magurany",
