--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,14 +30,14 @@
       "args": [
         "sync",
         "--from-time",
-        "2019-11-04",
+        "2019-12-04",
         "--to-time",
-        "2019-11-08",
+        "2019-12-06",
         "--dry-run"
       ],
       "skipFiles": [
         "<node_internals>/**",
-        // "${workspaceFolder}/node_modules/**"
+        "${workspaceFolder}/node_modules/**"
       ],
       "console": "integratedTerminal"
     }
