--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "yargs": "^14.2.0"
   },
   "devDependencies": {
-    "eslint": "7.4.0"
+    "eslint": "^7.4.0"
   },
   "scripts": {
     "lint": "eslint lib/; exit 0",
