--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Logs Toggl time entries in Jira.",
   "homepage": "https://bitbucket.org/heymagurany/toggl-to-time-card",
+  "type": "module",
   "dependencies": {
     "bluebird": "^3.4.6",
     "ini": "^1.3.6",
@@ -11,7 +12,7 @@
     "read-all-up": "^1.0.1",
     "request": ">=2.53.0",
     "request-promise": "^4.1.1",
-    "toggl-client": "^1.1.0",
+    "toggl-client": "^3.5.0",
     "yargs": "^14.2.0"
   },
   "devDependencies": {
@@ -30,6 +31,6 @@
     "toggl-to-jira": "./bin/toggl-to-jira"
   },
   "engines": {
-    "node": "^12.13.0"
+    "node": "^22.17.0"
   }
 }
