--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "yargs": "^18.0.0"
   },
   "devDependencies": {
-    "eslint": "^9.29.0"
+    "eslint": "^9.29.0",
+    "jest": "^29.7.0"
   },
   "scripts": {
     "lint": "eslint lib/; exit 0",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --experimental-vm-modules node_modules/.bin/jest",
+    "test:watch": "node --experimental-vm-modules node_modules/.bin/jest --watch"
   },
   "author": "Matt Magurany",
   "files": [
